style the recent builds list
Just remove the bullets & italicise the package versions for now.

Signed-off-by: Paul Burton <paulburton89@gmail.com>

--- a/theme/static/css/index.css
+++ b/theme/static/css/index.css
@@ -37,6 +37,16 @@ div#recent-builds h3 {
 	color: #181818;
 }
 
+div#recent-builds ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+div#recent-builds ul li span.ver {
+	font-style: italic;
+}
+
 article.hentry {
 }
 
