Switch recent builds to use the new python code
Previously this was including a static generated list of recent builds.
Do that dynamically instead, by invoking the previously added python
code via wsgi.

Signed-off-by: Paul Burton <paulburton89@gmail.com>

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -8,7 +8,7 @@
 <div id="right-info">
   <div id="recent-builds">
     <h3>Recent Package Builds</h3>
-    <!--#include virtual="/gen/recent-builds.html" -->
+    <!--#include virtual="/py/ssi?p=recent-builds" -->
   </div>
 </div>
 <section id="content">
