Move recent build arch to the right
This matches archlinux.org & just looks better in general.

Signed-off-by: Paul Burton <paulburton89@gmail.com>

--- a/theme/static/css/index.css
+++ b/theme/static/css/index.css
@@ -47,6 +47,10 @@ div#recent-builds ul li span.ver {
 	font-style: italic;
 }
 
+div#recent-builds ul li span.arch {
+	float: right;
+}
+
 article.hentry {
 }
 
